<resources>
    <string name="app_name">butter</string>
    <string name="butterLogo">Butter</string>
    <string name="splash_desc">MADE BY BUTTER</string>
    <string name="ex_john_smith">Ex: John Smith</string>
    <string name="username">Username</string>
    <string name="create_profile_descr">Enter your info for events and fun!</string>
    <string name="create_profile">Create Profile</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="phone_number">Phone Number (Optional)</string>
    <string name="phone_hint">Ex: 780-xxx-xxxx</string>
    <string name="role">Select Role</string>
    <string name="create_button">Create</string>
    <string name="facility_name">Facility Name</string>
    <string name="facility_hint">Eg. UASU</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
...
    <string name="notifications_text">Notifications</string>
    <string name="profiles_text">Profile</string>
    <string name="QR_code_info">Scan your QR Code on the top right \nto find events near you!</string>
    <string name="upcoming_text">Upcoming</string>
    <string name="profile_text">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="role_text">Role</string>
    <string name="qrscanner">q</string>
    <string name="create_event">Create Event</string>
    <string name="event_name">Event Name</string>
    <string name="start_date">Registration Open Date</string>
    <string name="end_date">Registration Close Date</string>
    <string name="description">Description</string>
...
    <string name="event_announcement">Event Announcement</string>
    <string name="current_title">%s</string>
    <string name="current_start">%s</string>
    <string name="current_end">%s</string>
    <string name="current_description">%s</string>
    <string name="current_max">%s</string>
    <string name="save_changes">Save Changes</string>
    <string name="event_date">Event Date</string>
    <string name="select_role">Select Role</string>
    <string name="event_date_s">Event Date: %s</string>
    <string name="remove_profile">Event Date: %s</string>
    <string name="add_image">Add Image</string>
    <string name="entrants_list">Entrants list</string>
...
    <string name="capacity_list">%d</string>
    <string name="my_events_label">My Events</string>
    <string name="waiting_list">Waiting List</string>
    <string name="entrant_event_title">%s</string>
    <string name="entrant_event_date">%s</string>
    <string name="delete_my_event">Delete Event</string>
    <string name="empty_phone">No phone given.</string>
    <string name="name_s">%s</string>
    <string name="announcement">Announcement</string>
    <string name="yes">Yes</string>
    <string name="sample_size">Sample size</string>
    <string name="ok">OK</string>
    <string name="invited_list">Invited List</string>

    <string-array name="roles_array">
        <item>Entrant</item>
        <item>Organizer</item>
        <item>Both</item>
    </string-array>

</resources>
