<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Back button only accessible to admins -->
            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/go_back"
                android:padding="12dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone" />

            <!-- Button only accessible to admin - lets them delete a profile -->
            <Button
                android:id="@+id/admin_button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/qrscanner"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/admin_button"
                android:stateListAnimator="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_text"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingBottom="20dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/profile_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="visible" />

            <TextView
                android:id="@+id/profileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="40sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/profileImage"
                app:layout_constraintTop_toTopOf="@+id/profileImage"
                app:layout_constraintBottom_toBottomOf="@+id/profileImage"
                app:layout_constraintEnd_toEndOf="@+id/profileImage"
                />

            <TextView
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/profileImage"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="50dp" />

            <TextView
                android:id="@+id/username_text"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text=""
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/username"
                android:background="@drawable/edit_text_border"
                app:layout_constraintTop_toBottomOf="@id/username_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/email"
                app:layout_constraintTop_toBottomOf="@id/username_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/email_text"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textSize="12sp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/email"
                android:text=""
                android:background="@drawable/edit_text_border"
                app:layout_constraintTop_toBottomOf="@id/email_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/phone_number"
                app:layout_constraintTop_toBottomOf="@id/email_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/password_text"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text=""
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/number"
                android:textSize="12sp"
                android:background="@drawable/edit_text_border"
                app:layout_constraintTop_toBottomOf="@id/phone_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/role_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role_text"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/password_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/role_text"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/event_name"
                android:text=""
                android:textSize="12sp"
                android:background="@drawable/edit_text_border"
                app:layout_constraintTop_toBottomOf="@id/role_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/facility_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facility_name"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/role_text"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/facility_name_text"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text=""
                android:textSize="12sp"
                android:gravity="center_vertical"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/max_attendees"
                app:layout_constraintTop_toBottomOf="@id/facility_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/edit_text_border"
                android:visibility="gone" />

            <!-- not visible in admins perspective -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_profile_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                app:layout_constraintTop_toBottomOf="@id/facility_name_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:backgroundTint="@color/primaryPurpleColor"
                android:textColor="@color/white"
                app:cornerRadius="10dp"
                android:visibility="visible"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
