...
            android:text="@string/phone_number"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <EditText
            android:id="@+id/create_number_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:drawableStart="@drawable/number"
            android:drawablePadding="8dp"
...
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/role_label">

            <Spinner
                android:id="@+id/edit_role_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:minHeight="48dp"

                app:layout_constraintEnd_toEndOf="parent"
...
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/facility_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_changes_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save_changes"
            android:textColor="@color/white"
            app:backgroundTint="@color/primaryPurpleColor"
...
