...
    <item android:id="@+id/eventsIcon"
        android:title="@string/events"
        android:icon="@drawable/ticket"/>
    <item android:id="@+id/notificationsIcon"
        android:title="@string/notifications"
        android:icon="@drawable/notification" />
    <item android:id="@+id/profileIcon"
        android:title="@string/profile"
        android:icon="@drawable/profile"/>
</menu>
